# stepper

./: cabal.project  flake.nix  hie.yaml
examples/: Add.hs  Add.stepper  Bool.stepper  Cyclic.stepper  Fib.hs  Fib.stepper  Memo.stepper  Sum.stepper  Y.stepper
src/: Main.hs  stepper.cabal
src/Data/: IText.hs  Inductive.hs
src/Stepper/: BuiltIn.hs  Evaluator.hs  Interactive.hs  Located.hs  Options.hs  Parser.y  Renamer.hs  Render.hs
src/Stepper/BuiltIn/: GenDecls.hs  Strings.hs
src/Stepper/Parser/: Context.hs  Error.hs  Lexer.hs  Token.hs
src/Stepper/Render/: Font.hs  Layout.hs  Style.hs
src/Stepper/Syntax/: Basic.hs  Literal.hs  Parsed.hs  Scoped.hs
